rnn data preparation

--- a/service/MarketDataService.ipynb
+++ b/service/MarketDataService.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -1262,6 +1262,32 @@
    ],
    "source": [
     "plot_series(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "##### Get and save market data for our rnn model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "pycharm": {
+     "name": "#%% code\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "service = Finnhub_wrapper()\n",
+    "btcusdt_response_csv = service.get_candle_data('crypto', {'symbol':'BTCUSDT', 'exchange' : 'BINANCE', 'resolution': 'D', 'from': to_unix_timestamp('2019-01-01'), 'to': to_unix_timestamp('2020-01-01'), 'format' : 'csv'})\n",
+    "response_to_csv('BTCUSDT', btcusdt_response_csv)"
    ]
   }
  ],
