finish simple rnn prediction model

--- a/service/MarketDataService.ipynb
+++ b/service/MarketDataService.ipynb
@@ -1289,6 +1289,17 @@
     "btcusdt_response_csv = service.get_candle_data('crypto', {'symbol':'BTCUSDT', 'exchange' : 'BINANCE', 'resolution': 'D', 'from': to_unix_timestamp('2019-01-01'), 'to': to_unix_timestamp('2020-01-01'), 'format' : 'csv'})\n",
     "response_to_csv('BTCUSDT', btcusdt_response_csv)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "service = Finnhub_wrapper()\n",
+    "btcusdt_response_csv = service.get_candle_data('stock', {'symbol':'AAPL', 'resolution': 'D', 'from': to_unix_timestamp('2000-01-01'), 'to': to_unix_timestamp('2020-01-01'), 'format' : 'csv'})\n",
+    "response_to_csv('AAPL', btcusdt_response_csv)"
+   ]
   }
  ],
  "metadata": {
