change user story, load first datasets

--- a/service/MarketDataService.ipynb
+++ b/service/MarketDataService.ipynb
@@ -2,6 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Wrapper for Finnhub API Calls"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -1278,7 +1285,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "service = Finnhub_wrapper()\n",
@@ -1288,9 +1299,24 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "##### Get and save market data for our pattern prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "service = Finnhub_wrapper()\n",
+    "btcusdt_response_csv = service.get_candle_data('crypto', {'symbol':'BTCUSDT', 'exchange' : 'BINANCE', 'resolution': 'D', 'from': to_unix_timestamp('2018-12-16'), 'to': to_unix_timestamp('2019-06-26'), 'format' : 'csv'})\n",
+    "response_to_csv('BTCUSDT', btcusdt_response_csv)"
    ]
   },
   {
@@ -1299,9 +1325,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "service = Finnhub_wrapper()\n",
-    "btcusdt_response_csv = service.get_candle_data('crypto', {'symbol':'BTCUSDT', 'exchange' : 'BINANCE', 'resolution': 'D', 'from': to_unix_timestamp('2017-12-16'), 'to': to_unix_timestamp('2019-03-30'), 'format' : 'csv'})\n",
-    "response_to_csv('BTCUSDT', btcusdt_response_csv)"
+    "ethusdt_response_csv = service.get_candle_data('crypto', {'symbol':'ETHUSDT', 'exchange' : 'BINANCE', 'resolution': 'D', 'from': to_unix_timestamp('2018-12-16'), 'to': to_unix_timestamp('2019-06-26'), 'format' : 'csv'})\n",
+    "response_to_csv('ETHUSDT', ethusdt_response_csv)"
    ]
   },
   {
@@ -1310,28 +1335,143 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ethusdt_response_csv = service.get_candle_data('crypto', {'symbol':'ETHUSDT', 'exchange' : 'BINANCE', 'resolution': 'D', 'from': to_unix_timestamp('2018-01-13'), 'to': to_unix_timestamp('2019-05-09'), 'format' : 'csv'})\n",
-    "response_to_csv('ETHUSDT', ethusdt_response_csv)"
+    "maticusdt_response_csv = service.get_candle_data('crypto', {'symbol':'MATICUSDT', 'exchange' : 'BINANCE', 'resolution': 60, 'from': to_unix_timestamp('2019-05-09'), 'to': to_unix_timestamp('2019-05-21'), 'format' : 'csv'})\n",
+    "response_to_csv('MATICUSDT', maticusdt_response_csv)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ltcusdt_response_csv = service.get_candle_data('crypto', {'symbol':'LTCUSDT', 'exchange' : 'BINANCE', 'resolution': 'D', 'from': to_unix_timestamp('2017-12-18'), 'to': to_unix_timestamp('2019-02-06'), 'format' : 'csv'})\n",
-    "response_to_csv('LTCUSDT', ltcusdt_response_csv)"
+    "icxusdt_response_csv = service.get_candle_data('crypto', {'symbol':'ICXUSDT', 'exchange' : 'BINANCE', 'resolution': 60, 'from': to_unix_timestamp('2020-01-09'), 'to': to_unix_timestamp('2020-02-04'), 'format' : 'csv'})\n",
+    "response_to_csv('ICXUSDT', icxusdt_response_csv)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "eosusdt_response_csv = service.get_candle_data('crypto', {'symbol':'EOSUSDT', 'exchange' : 'BINANCE', 'resolution': 'D', 'from': to_unix_timestamp('2018-06-02'), 'to': to_unix_timestamp('2019-02-03'), 'format' : 'csv'})\n",
-    "response_to_csv('EOSUSDT', eosusdt_response_csv)"
+    "binanceusdt_response_csv = service.get_candle_data('crypto', {'symbol':'BNBUSDT', 'exchange' : 'BINANCE', 'resolution': 'D', 'from': to_unix_timestamp('2017-11-06'), 'to': to_unix_timestamp('2018-01-12'), 'format' : 'csv'})\n",
+    "response_to_csv('BNBUSDT', binanceusdt_response_csv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xlmbtc_response_csv = service.get_candle_data('crypto', {'symbol':'XLMBTC', 'exchange' : 'BINANCE', 'resolution':'D', 'from': to_unix_timestamp('2017-12-11'), 'to': to_unix_timestamp('2018-01-04'), 'format' : 'csv'})\n",
+    "response_to_csv('XLMBTC', xlmbtc_response_csv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eosbtc_response_csv = service.get_candle_data('crypto', {'symbol':'EOSBTC', 'exchange' : 'BINANCE', 'resolution': 'D', 'from': to_unix_timestamp('2017-10-12'), 'to': to_unix_timestamp('2018-04-29'), 'format' : 'csv'})\n",
+    "response_to_csv('EOSBTC', eosbtc_response_csv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rvnbtc_response_csv = service.get_candle_data('crypto', {'symbol':'RVNBTC', 'exchange' : 'BINANCE', 'resolution': 60, 'from': to_unix_timestamp('2019-02-23'), 'to': to_unix_timestamp('2019-03-08'), 'format' : 'csv'})\n",
+    "response_to_csv('RVNBTC', rvnbtc_response_csv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trxbtc_response_csv = service.get_candle_data('crypto', {'symbol':'TRXBTC', 'exchange' : 'BINANCE', 'resolution': 60, 'from': to_unix_timestamp('2017-12-12'), 'to': to_unix_timestamp('2017-12-21'), 'format' : 'csv'})\n",
+    "response_to_csv('TRXBTC', trxbtc_response_csv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adabtc_response_csv = service.get_candle_data('crypto', {'symbol':'ADABTC', 'exchange' : 'BINANCE', 'resolution': 60, 'from': to_unix_timestamp('2017-12-08'), 'to': to_unix_timestamp('2017-12-19'), 'format' : 'csv'})\n",
+    "response_to_csv('ADABTC', adabtc_response_csv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wavesbtc_response_csv = service.get_candle_data('crypto', {'symbol':'WAVESBTC', 'exchange' : 'BINANCE', 'resolution': 60, 'from': to_unix_timestamp('2018-11-29'), 'to': to_unix_timestamp('2018-12-20'), 'format' : 'csv'})\n",
+    "response_to_csv('WAVESBTC', wavesbtc_response_csv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aapl_response_csv = service.get_candle_data('stock', {'symbol':'AAPL', 'resolution': 'D', 'from': to_unix_timestamp('2004-10-04'), 'to': to_unix_timestamp('2019-11-18'), 'format' : 'csv'})\n",
+    "response_to_csv('AAPL2', aapl_response_csv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "amzn_response_csv = service.get_candle_data('stock', {'symbol':'AMZN', 'resolution': 'D', 'from': to_unix_timestamp('2008-12-01'), 'to': to_unix_timestamp('2020-04-11'), 'format' : 'csv'})\n",
+    "response_to_csv('AMZN', amzn_response_csv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nflx_response_csv = service.get_candle_data('stock', {'symbol':'NFLX', 'resolution': 'D', 'from': to_unix_timestamp('2013-01-13'), 'to': to_unix_timestamp('2020-01-26'), 'format' : 'csv'})\n",
+    "response_to_csv('NFLX', nflx_response_csv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "kod_response_csv = service.get_candle_data('stock', {'symbol':'KOD', 'resolution': 'D', 'from': to_unix_timestamp('2019-04-03'), 'to': to_unix_timestamp('2020-03-03'), 'format' : 'csv'})\n",
+    "response_to_csv('KOD', kod_response_csv)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kod_response_csv = service.get_candle_data('stock', {'symbol':'KOD', 'resolution': 'D', 'from': to_unix_timestamp('2019-04-03'), 'to': to_unix_timestamp('2020-03-03'), 'format' : 'csv'})\n",
+    "response_to_csv('KOD', kod_response_csv)"
    ]
   }
  ],
@@ -1356,10 +1496,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
