add more datasets

--- a/service/MarketDataService.ipynb
+++ b/service/MarketDataService.ipynb
@@ -1452,10 +1452,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "kod_response_csv = service.get_candle_data('stock', {'symbol':'KOD', 'resolution': 'D', 'from': to_unix_timestamp('2019-04-03'), 'to': to_unix_timestamp('2020-03-03'), 'format' : 'csv'})\n",
     "response_to_csv('KOD', kod_response_csv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kod_response_csv = service.get_candle_data('stock', {'symbol':'KOD', 'resolution': 'D', 'from': to_unix_timestamp('2019-04-03'), 'to': to_unix_timestamp('2020-03-03'), 'format' : 'csv'})\n",
+    "response_to_csv('KOD', kod_response_csv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "ge_response_csv = service.get_candle_data('stock', {'symbol':'GE', 'resolution': 'D', 'from': to_unix_timestamp('1989-04-10'), 'to': to_unix_timestamp('2000-07-10'), 'format' : 'csv'})\n",
+    "response_to_csv('GE', ge_response_csv)"
    ],
    "metadata": {
     "collapsed": false,
@@ -1466,12 +1490,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "f_response_csv = service.get_candle_data('stock', {'symbol':'F', 'resolution': 'D', 'from': to_unix_timestamp('1984-05-13'), 'to': to_unix_timestamp('1998-12-06'), 'format' : 'csv'})\n",
+    "response_to_csv('F', f_response_csv)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "amd_response_csv = service.get_candle_data('stock', {'symbol':'AMD', 'resolution': 'D', 'from': to_unix_timestamp('2015-11-08'), 'to': to_unix_timestamp('2020-02-23'), 'format' : 'csv'})\n",
+    "response_to_csv('AMD', amd_response_csv)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "ba_response_csv = service.get_candle_data('stock', {'symbol':'BA', 'resolution': 'D', 'from': to_unix_timestamp('2009-06-08'), 'to': to_unix_timestamp('2018-11-12'), 'format' : 'csv'})\n",
+    "response_to_csv('BA', ba_response_csv)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "t_response_csv = service.get_candle_data('stock', {'symbol':'T', 'resolution': 'D', 'from': to_unix_timestamp('1984-06-17'), 'to': to_unix_timestamp('1999-07-04'), 'format' : 'csv'})\n",
+    "response_to_csv('T', t_response_csv)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "c_response_csv = service.get_candle_data('stock', {'symbol':'C', 'resolution': 'D', 'from': to_unix_timestamp('1991-10-27'), 'to': to_unix_timestamp('2000-04-30'), 'format' : 'csv'})\n",
+    "response_to_csv('C', c_response_csv)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "mgm_response_csv = service.get_candle_data('stock', {'symbol':'MGM', 'resolution': 'D', 'from': to_unix_timestamp('1998-11-29'), 'to': to_unix_timestamp('2007-08-15'), 'format' : 'csv'})\n",
+    "response_to_csv('MGM', mgm_response_csv)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "mro_response_csv = service.get_candle_data('stock', {'symbol':'MRO', 'resolution': 'D', 'from': to_unix_timestamp('2003-01-06'), 'to': to_unix_timestamp('2007-03-19'), 'format' : 'csv'})\n",
+    "response_to_csv('MRO', mro_response_csv)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kod_response_csv = service.get_candle_data('stock', {'symbol':'KOD', 'resolution': 'D', 'from': to_unix_timestamp('2019-04-03'), 'to': to_unix_timestamp('2020-03-03'), 'format' : 'csv'})\n",
-    "response_to_csv('KOD', kod_response_csv)"
+    "mro_response_csv = service.get_candle_data('stock', {'symbol':'MRO', 'resolution': 'D', 'from': to_unix_timestamp('2003-01-06'), 'to': to_unix_timestamp('2007-03-19'), 'format' : 'csv'})\n",
+    "response_to_csv('MRO', mro_response_csv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f_response_csv = service.get_candle_data('stock', {'symbol':'F', 'resolution': 'D', 'from': to_unix_timestamp('1984-05-13'), 'to': to_unix_timestamp('1998-12-06'), 'format' : 'csv'})\n",
+    "response_to_csv('F', f_response_csv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "amd_response_csv = service.get_candle_data('stock', {'symbol':'AMD', 'resolution': 'D', 'from': to_unix_timestamp('2015-11-08'), 'to': to_unix_timestamp('2020-02-23'), 'format' : 'csv'})\n",
+    "response_to_csv('AMD', amd_response_csv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ba_response_csv = service.get_candle_data('stock', {'symbol':'BA', 'resolution': 'D', 'from': to_unix_timestamp('2009-06-08'), 'to': to_unix_timestamp('2018-11-12'), 'format' : 'csv'})\n",
+    "response_to_csv('BA', ba_response_csv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t_response_csv = service.get_candle_data('stock', {'symbol':'T', 'resolution': 'D', 'from': to_unix_timestamp('1984-06-17'), 'to': to_unix_timestamp('1999-07-04'), 'format' : 'csv'})\n",
+    "response_to_csv('T', t_response_csv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c_response_csv = service.get_candle_data('stock', {'symbol':'C', 'resolution': 'D', 'from': to_unix_timestamp('1991-10-27'), 'to': to_unix_timestamp('2000-04-30'), 'format' : 'csv'})\n",
+    "response_to_csv('C', c_response_csv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mgm_response_csv = service.get_candle_data('stock', {'symbol':'MGM', 'resolution': 'D', 'from': to_unix_timestamp('1998-11-29'), 'to': to_unix_timestamp('2007-08-15'), 'format' : 'csv'})\n",
+    "response_to_csv('MGM', mgm_response_csv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mro_response_csv = service.get_candle_data('stock', {'symbol':'MRO', 'resolution': 'D', 'from': to_unix_timestamp('2003-01-06'), 'to': to_unix_timestamp('2007-03-19'), 'format' : 'csv'})\n",
+    "response_to_csv('MRO', mro_response_csv)"
    ]
   }
  ],
