add more test data, add first model evaluation

--- a/service/MarketDataService.ipynb
+++ b/service/MarketDataService.ipynb
@@ -1317,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1548,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1557,7 +1557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1568,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1665,7 +1665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1676,7 +1676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1687,7 +1687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1698,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1709,7 +1709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1720,7 +1720,197 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "rrc_response_csv = service.get_candle_data('stock', {'symbol':'RRC', 'resolution': 'D', 'from': to_unix_timestamp('2002-07-15'), 'to': to_unix_timestamp('2008-07-14'), 'format' : 'csv'})\n",
+    "response_to_csv('RRC', rrc_response_csv)\n",
+    "RULs.append(5)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "bp_response_csv = service.get_candle_data('stock', {'symbol':'BP', 'resolution': 'D', 'from': to_unix_timestamp('1978-07-05'), 'to': to_unix_timestamp('1980-12-19'), 'format' : 'csv'})\n",
+    "response_to_csv('BP', bp_response_csv)\n",
+    "RULs.append(10)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "fcx_response_csv = service.get_candle_data('stock', {'symbol':'FCX', 'resolution': 'D', 'from': to_unix_timestamp('2000-11-05'), 'to': to_unix_timestamp('2008-08-18'), 'format' : 'csv'})\n",
+    "response_to_csv('FCX', fcx_response_csv)\n",
+    "RULs.append(13)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "vale_response_csv = service.get_candle_data('stock', {'symbol':'VALE', 'resolution': 'D', 'from': to_unix_timestamp('2002-10-13'), 'to': to_unix_timestamp('2008-07-01'), 'format' : 'csv'})\n",
+    "response_to_csv('VALE', vale_response_csv)\n",
+    "RULs.append(7)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "rio_response_csv = service.get_candle_data('stock', {'symbol':'RIO', 'resolution': 'D', 'from': to_unix_timestamp('1998-08-23'), 'to': to_unix_timestamp('2008-08-25'), 'format' : 'csv'})\n",
+    "response_to_csv('RIO', rio_response_csv)\n",
+    "RULs.append(6)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "mt_response_csv = service.get_candle_data('stock', {'symbol':'MT', 'resolution': 'D', 'from': to_unix_timestamp('2002-12-22'), 'to': to_unix_timestamp('2008-08-17'), 'format' : 'csv'})\n",
+    "response_to_csv('MT', mt_response_csv)\n",
+    "RULs.append(10)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "pkx_response_csv = service.get_candle_data('stock', {'symbol':'PKX', 'resolution': 'D', 'from': to_unix_timestamp('2002-10-01'), 'to': to_unix_timestamp('2008-08-02'), 'format' : 'csv'})\n",
+    "response_to_csv('PKX', pkx_response_csv)\n",
+    "RULs.append(9)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save the RULs to a file\n",
+    "with open(\"data\\RULs.txt\", \"w\") as output:\n",
+    "    for rul in RULs:\n",
+    "        output.write(str(rul) + '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bp_response_csv = service.get_candle_data('stock', {'symbol':'BP', 'resolution': 'D', 'from': to_unix_timestamp('1978-07-05'), 'to': to_unix_timestamp('1980-12-19'), 'format' : 'csv'})\n",
+    "response_to_csv('BP', bp_response_csv)\n",
+    "RULs.append(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fcx_response_csv = service.get_candle_data('stock', {'symbol':'FCX', 'resolution': 'D', 'from': to_unix_timestamp('2000-11-05'), 'to': to_unix_timestamp('2008-08-18'), 'format' : 'csv'})\n",
+    "response_to_csv('FCX', fcx_response_csv)\n",
+    "RULs.append(13)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vale_response_csv = service.get_candle_data('stock', {'symbol':'VALE', 'resolution': 'D', 'from': to_unix_timestamp('2002-10-13'), 'to': to_unix_timestamp('2008-07-01'), 'format' : 'csv'})\n",
+    "response_to_csv('VALE', vale_response_csv)\n",
+    "RULs.append(7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rio_response_csv = service.get_candle_data('stock', {'symbol':'RIO', 'resolution': 'D', 'from': to_unix_timestamp('1998-08-23'), 'to': to_unix_timestamp('2008-08-25'), 'format' : 'csv'})\n",
+    "response_to_csv('RIO', rio_response_csv)\n",
+    "RULs.append(6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mt_response_csv = service.get_candle_data('stock', {'symbol':'MT', 'resolution': 'D', 'from': to_unix_timestamp('2002-12-22'), 'to': to_unix_timestamp('2008-08-17'), 'format' : 'csv'})\n",
+    "response_to_csv('MT', mt_response_csv)\n",
+    "RULs.append(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pkx_response_csv = service.get_candle_data('stock', {'symbol':'PKX', 'resolution': 'D', 'from': to_unix_timestamp('2002-10-01'), 'to': to_unix_timestamp('2008-08-02'), 'format' : 'csv'})\n",
+    "response_to_csv('PKX', pkx_response_csv)\n",
+    "RULs.append(9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
